--- a/src/main/resources/templates/originals/portfolio-grid_o.html
+++ b/src/main/resources/templates/originals/portfolio-grid_o.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./favicon.ico">
+  <link rel="shortcut icon" href="../favicon.ico">
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -254,7 +254,7 @@
         <!-- Nav -->
         <nav class="js-mega-menu navbar navbar-expand-lg">
           <!-- Logo -->
-          <a class="navbar-brand" href="./index.html" aria-label="Front">
+          <a class="navbar-brand" href="../index.html" aria-label="Front">
             <img src="../svg/logos/logo.svg" alt="Logo">
           </a>
           <!-- End Logo -->
@@ -308,7 +308,7 @@
                         <div class="row mega-menu-body">
                           <div class="col-sm-6 mb-3 mb-sm-0">
                             <span class="d-block h5">Classic</span>
-                            <a class="dropdown-item " href="./index.html">Agency</a>
+                            <a class="dropdown-item " href="../index.html">Agency</a>
                             <a class="dropdown-item " href="./landing-classic-analytics.html">Analytics <span class="badge badge-primary badge-pill ml-2">Hot</span></a>
                             <a class="dropdown-item " href="./landing-classic-studio.html">Studio</a>
                             <a class="dropdown-item " href="./landing-classic-marketing.html">Marketing</a>
@@ -394,7 +394,7 @@
                         <a class="dropdown-item " href="./portfolio-case-studies-product.html">Case Studies Product</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item " href="./portfolio-single-page-list.html">Single Page List</a>
-                        <a class="dropdown-item " href="./portfolio-single-page-grid.html">Single Page Grid</a>
+                        <a class="dropdown-item " href="portfolio-single-page-grid_o.html">Single Page Grid</a>
                         <a class="dropdown-item " href="./portfolio-single-page-masonry.html">Single Page Masonry</a>
                       </div>
                     </div>
@@ -777,7 +777,7 @@
            }'>
         <!-- Item -->
         <div class="cbp-item product">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img12.jpg" alt="Image Description">
@@ -793,7 +793,7 @@
 
         <!-- Item -->
         <div class="cbp-item branding">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img11.jpg" alt="Image Description">
@@ -809,7 +809,7 @@
 
         <!-- Item -->
         <div class="cbp-item product branding">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img21.jpg" alt="Image Description">
@@ -825,7 +825,7 @@
 
         <!-- Item -->
         <div class="cbp-item product illustration">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img24.jpg" alt="Image Description">
@@ -841,7 +841,7 @@
 
         <!-- Item -->
         <div class="cbp-item design illustration">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img19.jpg" alt="Image Description">
@@ -857,7 +857,7 @@
 
         <!-- Item -->
         <div class="cbp-item product branding">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img20.jpg" alt="Image Description">
@@ -873,7 +873,7 @@
 
         <!-- Item -->
         <div class="cbp-item product branding">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img22.jpg" alt="Image Description">
@@ -889,7 +889,7 @@
 
         <!-- Item -->
         <div class="cbp-item product branding">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img23.jpg" alt="Image Description">
@@ -905,7 +905,7 @@
 
         <!-- Item -->
         <div class="cbp-item product branding">
-          <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+          <a class="cbp-caption" href="portfolio-single-page-grid_o.html">
             <div class="overflow-hidden rounded-lg">
               <div class="cbp-caption-defaultWrap">
                 <img class="rounded-lg" src="../img/400x500/img10.jpg" alt="Image Description">
@@ -931,7 +931,7 @@
           <div class="col-lg-3 ml-lg-auto mb-5 mb-lg-0">
             <!-- Logo -->
             <div class="mb-4">
-              <a href="index.html" aria-label="Front">
+              <a href="../index.html" aria-label="Front">
                 <img class="brand" src="../svg/logos/logo-white.svg" alt="Logo">
               </a>
             </div>
