--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -62,77 +62,81 @@
                             Jump to
                         </a>
 
-                        <div id="jumpToDropdown" class="hs-unfold-content dropdown-menu">
-                            <a class="dropdown-item" href="./page-faq.html">Help</a>
-                            <a class="dropdown-item" href="./page-contacts-agency.html">Contacts</a>
-                        </div>
+<!--                        <div id="jumpToDropdown" class="hs-unfold-content dropdown-menu">-->
+<!--                            <a class="dropdown-item" href="./page-faq.html">Help</a>-->
+<!--                            <a class="dropdown-item" href="./page-contacts-agency.html">Contacts</a>-->
+<!--                        </div>-->
                     </div>
                     <!-- End Jump To -->
 
                     <!-- Links -->
-                    <div class="nav nav-sm nav-y-0 d-none d-sm-flex ml-sm-auto">
-                        <a class="nav-link" href="./page-faq.html">Help</a>
-                        <a class="nav-link" href="./page-contacts-agency.html">Contacts</a>
-                    </div>
+<!--                    <div class="nav nav-sm nav-y-0 d-none d-sm-flex ml-sm-auto">-->
+<!--                        <a class="nav-link" href="./page-faq.html">Help</a>-->
+<!--                        <a class="nav-link" href="./page-contacts-agency.html">Contacts</a>-->
+<!--                    </div>-->
                     <!-- End Links -->
                 </div>
 
                 <ul class="list-inline ml-2 mb-0">
-                    <!-- Search -->
-                    <li class="list-inline-item">
-                        <div class="hs-unfold">
-                            <a class="js-hs-unfold-invoker btn btn-xs btn-icon btn-ghost-secondary" href="javascript:;"
-                               data-hs-unfold-options='{
-                    "target": "#searchPushTop",
-                    "type": "jquery-slide",
-                    "contentSelector": ".search-push-top"
-                   }'>
-                                <i class="fas fa-search"></i>
-                            </a>
-                        </div>
-                    </li>
-                    <!-- End Search -->
 
-                    <!-- Shopping Cart -->
-                    <li class="list-inline-item">
-                        <div class="hs-unfold">
-                            <a class="js-hs-unfold-invoker btn btn-xs btn-icon btn-ghost-secondary" href="javascript:;"
-                               data-hs-unfold-options='{
-                    "target": "#shoppingCartDropdown",
-                    "type": "css-animation",
-                    "event": "hover",
-                    "hideOnScroll": "true"
-                   }'>
-                                <i class="fas fa-shopping-cart"></i>
-                            </a>
+<!--                    -->
+<!--                    &lt;!&ndash; Search &ndash;&gt;-->
+<!--                    <li class="list-inline-item">-->
+<!--                        <div class="hs-unfold">-->
+<!--                            <a class="js-hs-unfold-invoker btn btn-xs btn-icon btn-ghost-secondary" href="javascript:;"-->
+<!--                               data-hs-unfold-options='{-->
+<!--                    "target": "#searchPushTop",-->
+<!--                    "type": "jquery-slide",-->
+<!--                    "contentSelector": ".search-push-top"-->
+<!--                   }'>-->
+<!--                                <i class="fas fa-search"></i>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    &lt;!&ndash; End Search &ndash;&gt;-->
 
-                            <div id="shoppingCartDropdown" class="hs-unfold-content dropdown-menu dropdown-menu-right dropdown-card text-center" style="min-width: 275px;">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <figure class="max-w-9rem mx-auto mb-3">
-                                            <img class="img-fluid" src="../svg/illustrations/empty-cart.svg" alt="SVG">
-                                        </figure>
-                                        <span class="d-block">Your cart is empty</span>
-                                    </div>
+<!--                    &lt;!&ndash; Shopping Cart &ndash;&gt;-->
+<!--                    <li class="list-inline-item">-->
+<!--                        <div class="hs-unfold">-->
+<!--                            <a class="js-hs-unfold-invoker btn btn-xs btn-icon btn-ghost-secondary" href="javascript:;"-->
+<!--                               data-hs-unfold-options='{-->
+<!--                    "target": "#shoppingCartDropdown",-->
+<!--                    "type": "css-animation",-->
+<!--                    "event": "hover",-->
+<!--                    "hideOnScroll": "true"-->
+<!--                   }'>-->
+<!--                                <i class="fas fa-shopping-cart"></i>-->
+<!--                            </a>-->
 
-                                    <div class="card-footer">
-                                        <small>Free shipping on orders over <strong class="text-dark">$50</strong></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <!-- End Shopping Cart -->
+<!--                            <div id="shoppingCartDropdown" class="hs-unfold-content dropdown-menu dropdown-menu-right dropdown-card text-center" style="min-width: 275px;">-->
+<!--                                <div class="card">-->
+<!--                                    <div class="card-body">-->
+<!--                                        <figure class="max-w-9rem mx-auto mb-3">-->
+<!--                                            <img class="img-fluid" src="../svg/illustrations/empty-cart.svg" alt="SVG">-->
+<!--                                        </figure>-->
+<!--                                        <span class="d-block">Your cart is empty</span>-->
+<!--                                    </div>-->
 
-                    <!-- Account Login -->
-                    <li class="list-inline-item">
-                        <div class="hs-unfold">
-                            <a class="js-hs-unfold-invoker btn btn-icon btn-xs btn-ghost-secondary" href="javascript:;" data-toggle="modal" data-target="#signupModal">
-                                <i class="fas fa-user-circle"></i>
-                            </a>
-                        </div>
-                    </li>
-                    <!-- End Account Login -->
+<!--                                    <div class="card-footer">-->
+<!--                                        <small>Free shipping on orders over <strong class="text-dark">$50</strong></small>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    &lt;!&ndash; End Shopping Cart &ndash;&gt;-->
+
+<!--                    &lt;!&ndash; Account Login &ndash;&gt;-->
+<!--                    <li class="list-inline-item">-->
+<!--                        <div class="hs-unfold">-->
+<!--                            <a class="js-hs-unfold-invoker btn btn-icon btn-xs btn-ghost-secondary" href="javascript:;" data-toggle="modal" data-target="#signupModal">-->
+<!--                                <i class="fas fa-user-circle"></i>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    &lt;!&ndash; End Account Login &ndash;&gt;-->
+
+
                 </ul>
             </div>
         </div>
@@ -174,9 +178,20 @@
 
                             <!-- Button -->
                             <li class="navbar-nav-last-item">
-                                <a class="btn btn-sm btn-primary transition-3d-hover" href="https://themes.getbootstrap.com/product/front-multipurpose-responsive-template/" target="_blank">Buy Now</a>
+<!--                                <a class="btn btn-sm btn-primary transition-3d-hover" href="https://themes.getbootstrap.com/product/front-multipurpose-responsive-template/" target="_blank">Buy Now</a>-->
+                                <!-- PayPal Donate Button -->
+                                <div margin-right="auto" margin-left="auto" margin-top="5px" max-width="120px" padding-right="10px" padding-left="10px">
+                                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                                    <input type="hidden" name="hosted_button_id" value="4CZVWE8E25KDQ" />
+                                    <input type="image" src="../paypal/button-PayPal-donate.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" width="30%" height="30%" />
+                                    <img alt="" border="0" src="https://www.paypal.com/en_DE/i/scr/pixel.gif" />
+                                </form>
+                                </div>
+                                <!-- End of PayPal Donate Button -->
+
                             </li>
                             <!-- End Button -->
+
                         </ul>
                     </div>
                 </div>
@@ -185,6 +200,8 @@
             <!-- End Nav -->
         </div>
     </div>
+
+
 </header>
 <!-- ========== END HEADER ========== -->
 
