--- a/src/main/resources/templates/fragments/imageList.html
+++ b/src/main/resources/templates/fragments/imageList.html
@@ -5,23 +5,24 @@
     <title>Title</title>
 </head>
 <body>
+<div th:insert="fragments/javascriptImports"></div>
+
 <main id="content" role="main">
     <div class="container space-top-3 space-top-lg-4 space-bottom-2 space-bottom-lg-3">
         <!-- Hero -->
         <div class="text-center mb-5 mb-md-9">
             <h1 class="display-4 mb-0">
-          <span class="js-text-animation"
-                data-hs-typed-options='{
-                  "strings": ["www.imagesforfree.com", "Free HD Images"],
-                  "typeSpeed": 100,
-                  "loop": true,
-                  "backSpeed": 50,
-                  "backDelay": 1500
-                }'></span>
+                  <span class="js-text-animation"
+                        data-hs-typed-options='{
+                          "strings": ["www.imagesforfree.com", "Free HD Images"],
+                          "typeSpeed": 100,
+                          "loop": true,
+                          "backSpeed": 50,
+                          "backDelay": 1500
+                        }'></span>
             </h1>
         </div>
         <!-- End Hero -->
-
 
         <!-- Filter -->
         <div id="filterControls" class="text-center mb-5 mb-md-7">
@@ -40,46 +41,47 @@
         </div>
         <!-- End Filter -->
 
-
         <div class="cbp"
              data-hs-cbp-options='{
-                 "animationType": "fadeOut",
-                 "caption": "zoom",
-                 "gapHorizontal": 40,
-                 "gapVertical": 40,
-                 "mediaQueries": [
-                   {"width": 1500, "cols": 3},
-                   {"width": 1100, "cols": 3},
-                   {"width": 800, "cols": 3},
-                   {"width": 480, "cols": 2},
-                   {"width": 380, "cols": 1}
-                 ]
-           }'>
+                         "animationType": "fadeOut",
+                         "caption": "zoom",
+                         "gapHorizontal": 40,
+                         "gapVertical": 40,
+                         "mediaQueries": [
+                           {"width": 1500, "cols": 3},
+                           {"width": 1100, "cols": 3},
+                           {"width": 800, "cols": 3},
+                           {"width": 480, "cols": 2},
+                           {"width": 380, "cols": 1}
+                         ]
+                   }'>
 
-            <!-- own items -->
-            <!--            <th:block th:each="tagString, iter : ${tagsLoL}">-->
-            <!--                <div class="cbp-item" th:classappend="${tagString}">-->
-            <!--                <a class="cbp-caption" th:href="@{{imageName} (imageName=${namesLoL[iter.index][0]})}">-->
+            <!--             own items -->
+            <th:block th:each="tagString, iter : ${tagsLoL}">
+                <!--                <div class="cbp-item" th:classappend="${tagString}">-->
+                <!--                    <a class="cbp-caption">-->
+                <!--                        <div class="overflow-hidden rounded-lg">-->
+                <!--                            <div class="cbp-caption-defaultWrap">-->
+                <!--                                <img class="rounded-lg" data-toggle="modal" data-target="#myModal" th:src="@{../thumbnails_400x500/{imageName}.jpg (imageName=${namesLoL[iter.index][0]})}" alt="Image Description">-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                        <div class="p-4">-->
+                <!--                            <span class="d-block small text-body font-weight-bold text-cap">Product</span>-->
+                <!--                            <span class="d-block h3 mb-0">Canvas Schedule</span>-->
+                <!--                        </div>-->
+                <!--                    </a>-->
+                <!--                </div>-->
 
-            <!--                    <div class="overflow-hidden rounded-lg">-->
-            <!--                        <div class="cbp-caption-defaultWrap">-->
-            <!--                            <img class="rounded-lg" th:src="@{../thumbnails_400x500/{imageName}.jpg (imageName=${namesLoL[iter.index][0]})}" alt="Image Description">-->
-            <!--                        </div>-->
-            <!--                    </div>-->
-            <!--                    <div class="p-4">-->
-            <!--                        <span class="d-block small text-body font-weight-bold text-cap">Product</span>-->
-            <!--                        <span class="d-block h3 mb-0">Canva Schedule</span>-->
-            <!--                    </div>-->
-            <!--                </a>-->
-            <!--            </div>-->
-            <!--        </th:block>-->
+
+            </th:block>
+
 
             <!-- Item -->
             <div class="cbp-item product branding spring">
                 <a class="cbp-caption">
                     <div class="overflow-hidden rounded-lg">
                         <div class="cbp-caption-defaultWrap">
-                            <img class="rounded-lg" data-toggle="modal" data-target="#myModal" src="../img/400x500/img21.jpg" alt="Image Description">
+                            <img class="rounded-lg" data-imagename="imageNameVar" data-toggle="modal" data-target="#imageModalId" src="../img/400x500/img21.jpg" alt="Image Description">
                         </div>
                     </div>
                     <div class="p-4">
@@ -93,10 +95,12 @@
 
             <!-- Item -->
             <div class="cbp-item product illustration spring">
-                <a class="cbp-caption" href="./portfolio-single-page-grid.html">
+                <a class="cbp-caption">
                     <div class="overflow-hidden rounded-lg">
                         <div class="cbp-caption-defaultWrap">
-                            <img class="rounded-lg" src="../img/400x500/img24.jpg" alt="Image Description">
+                            <a data-imagename="ISBN" title="Add this item" class="open-ShowImageModal" href="#imageModalId">
+                                <img class="rounded-lg" src="../img/400x500/img24.jpg" alt="Image Description">
+                            </a>
                         </div>
                     </div>
                     <div class="p-4">
@@ -108,71 +112,79 @@
             <!-- End Item -->
 
         </div>
-
-        <!-- Edit Card Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="editCardModalTitle" >
-            <div class="modal-dialog modal-dialog-centered modal-xl" role="document" >
-                <div class="modal-content">
-                    <!-- Header -->
-                    <div class="modal-header" >
-<!--                        <h4 id="editCardModalTitle" class="modal-title">Edit card</h4>-->
-                        <div class="modal-close">
-                            <button type="button" class="btn btn-icon btn-xs btn-ghost-secondary" data-dismiss="modal" aria-label="Close">
-                                <svg width="14" height="14" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill="currentColor"
-                                          d="M11.5,9.5l5-5c0.2-0.2,0.2-0.6-0.1-0.9l-1-1c-0.3-0.3-0.7-0.3-0.9-0.1l-5,5l-5-5C4.3,2.3,3.9,2.4,3.6,2.6l-1,1 C2.4,3.9,2.3,4.3,2.5,4.5l5,5l-5,5c-0.2,0.2-0.2,0.6,0.1,0.9l1,1c0.3,0.3,0.7,0.3,0.9,0.1l5-5l5,5c0.2,0.2,0.6,0.2,0.9-0.1l1-1 c0.3-0.3,0.3-0.7,0.1-0.9L11.5,9.5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                    <!-- End Header -->
-                    <img src="../images/Abstract Sunset Girl.jpg" class="img-responsive">
-                    <!-- Body -->
-                    <div class="modal-body">
-
-                    </div>
-                    <!-- End Body -->
-                    <div class="modal-footer">
-                        <button type="button" id="modal-download" class="btn btn-primary block">Save changes</button>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <!-- End Edit Card Modal -->
     </div>
-
-
 </main>
 
+<!-- Edit Card Modal -->
+<div class="modal fade" id="myModal" data-imagename="123" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="editCardModalTitle">
+    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+        <div class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <!--                        <h4 id="editCardModalTitle" class="modal-title">Edit card</h4>-->
+                <div class="modal-close">
+                    <button type="button" class="btn btn-icon btn-xs btn-ghost-secondary" data-dismiss="modal" aria-label="Close">
+                        <svg width="14" height="14" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="currentColor"
+                                  d="M11.5,9.5l5-5c0.2-0.2,0.2-0.6-0.1-0.9l-1-1c-0.3-0.3-0.7-0.3-0.9-0.1l-5,5l-5-5C4.3,2.3,3.9,2.4,3.6,2.6l-1,1 C2.4,3.9,2.3,4.3,2.5,4.5l5,5l-5,5c-0.2,0.2-0.2,0.6,0.1,0.9l1,1c0.3,0.3,0.7,0.3,0.9,0.1l5-5l5,5c0.2,0.2,0.6,0.2,0.9-0.1l1-1 c0.3-0.3,0.3-0.7,0.1-0.9L11.5,9.5z"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <!-- End Modal Header -->
+            <!--                <img th:src="@{../images/Eating-Pizza.jpg}" class="img-responsive">333-->
+            <img src="" alt="" id="myImage" class="img-responsive"> 33333333
+            <div class="modal-footer">
+                <button type="button" id="modal-download" class="btn btn-primary block">Download for free</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Edit Card Modal-->
+
+
+<a data-imagename="ISBN" title="Add this item" class="open-ShowImageModal btn btn-primary" href="#imageModalId">test</a>
+
+<div class="modal fade" id="imageModalId" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <input type="text" name="abc" id="imagename" value=""/>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
 <link rel="stylesheet" href="../css/theme.min.css">
-<div th:insert="fragments/javascriptImports"></div>
-<!-- JS Implementing Plugins -->
-<script src="./node_modules/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
+<link rel="stylesheet" href="../css/customCSS.css">
 
-<!-- JS Front -->
-<script src="./assets/js/hs.mask.js"></script>
-
-<style>
-    .modal-dialog.modal-dialog-centered {
-        max-width: 60%;
-        max-height: 60%;
-    }
-
-    #modal-download {
-        width: 100%
-    }
-</style>
-
-<!-- JS Plugins Init. -->
 <script>
-    $(document).on('ready', function () {
-        // INITIALIZATION OF MASKED INPUT
-        // =======================================================
-        $('.js-masked-input').each(function () {
-            var mask = $.HSCore.components.HSMask.init($(this));
-        });
+
+    $(document).on("click", ".open-ShowImageModal", function (e) {
+
+        e.preventDefault();
+
+        var _self = $(this);
+
+        var imagename = _self.data('imagename');
+        $("#imagename").val(imagename);
+
+        $(_self.attr('href')).modal('show');
     });
+
 </script>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+
 </body>
 </html>
