Added more tags Pagination Prototype

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -184,7 +184,7 @@
                                 <form action="https://www.paypal.com/donate" method="post" target="_top">
                                     <input type="hidden" name="hosted_button_id" value="4CZVWE8E25KDQ" />
                                     <input type="image" src="../paypal/button-PayPal-donate.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" width="30%" height="30%" />
-                                    <img alt="" border="0" src="https://www.paypal.com/en_DE/i/scr/pixel.gif" />
+                                    <img alt="" border="0" />
                                 </form>
                                 </div>
                                 <!-- End of PayPal Donate Button -->
