--- a/src/main/resources/templates/portfolio-own.html
+++ b/src/main/resources/templates/portfolio-own.html
@@ -5,15 +5,15 @@
 
   <!-- Title -->
   <title>Portfolio - Boxed Card | Front - Responsive Website Template</title>
-
+  <!-- Required Meta Tags Always Come First -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <div th:include="fragments/head"></div>
 
   <!-- ========== END HEAD ========== -->
 
 </head>
 <body>
-
-
 
   <!-- ========== HEAD ========== -->
   <div th:include="fragments/header"></div>
