--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -14,17 +14,20 @@
                     <div class="col-md-6 mb-4 mb-md-0">
                         <!-- Nav Link -->
                         <ul class="nav nav-sm nav-white nav-x-sm align-items-center">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Privacy &amp; Policy</a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Privacy &amp; Policy</a>-->
+<!--                            </li>-->
                             <li class="nav-item opacity mx-3">&#47;</li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Terms</a>
+<!--                                <a class="nav-link" href="termsandconditions.html">Terms</a>-->
+<!--                                <a class="nav-link" href="../termsandconditions.html">Terms2</a>-->
+
+                                <a th:href="@{/terms}"></a></td>
                             </li>
                             <li class="nav-item opacity mx-3">&#47;</li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Site Map</a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Site Map</a>-->
+<!--                            </li>-->
                         </ul>
                         <!-- End Nav Link -->
                     </div>
@@ -34,7 +37,10 @@
                 <!-- Copyright -->
                 <div class="w-md-75 text-lg-center mx-lg-auto">
                     <p class="text-white opacity-sm small">&copy; Front. 2020 Htmlstream. All rights reserved.</p>
-                    <p class="text-white opacity-sm small">When you visit or interact with our sites, services or tools, we or our authorised service providers may use cookies for storing information to help provide you with a better, faster and safer experience and for marketing purposes.</p>
+                    <p class="text-white opacity-sm small">Free of Ads.</p>
+                    <p class="text-white opacity-sm small">Free of Cookies.</p>
+                    <p class="text-white opacity-sm small">Free of Tracking.</p>
+
                 </div>
                 <!-- End Copyright -->
             </div>
