--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Required Meta Tags Always Come First -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="./favicon.ico">
@@ -12,12 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="../vendor/hs-mega-menu/dist/hs-mega-menu.min.css">
+<!--    <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">-->
+<!--    <link rel="stylesheet" href="../vendor/hs-mega-menu/dist/hs-mega-menu.min.css">-->
     <link rel="stylesheet" href="../vendor/cubeportfolio/css/cubeportfolio.min.css">
 
     <!-- CSS Front Template -->
-    <link rel="stylesheet" href="../css/theme.min.css">
+<!--    <link rel="stylesheet" href="../css/theme.min.css">-->
 </head>
 <body>
 
