--- a/src/main/resources/templates/fragments/javascriptImports.html
+++ b/src/main/resources/templates/fragments/javascriptImports.html
@@ -5,12 +5,12 @@
 <body>
 
 <!-- JS Global Compulsory  -->
-<script src="../vendor/jquery/dist/jquery.min.js"></script>
+<script src="../vendor/jquery/dist/jquery.min.js" ></script>
 <script src="../vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
 <script src="../vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- JS Implementing Plugins -->
-<script src="../vendor/hs-header/dist/hs-header.min.js"></script>
+<!--<script src="../vendor/hs-header/dist/hs-header.min.js"></script>-->
 <script src="../vendor/hs-go-to/dist/hs-go-to.min.js"></script>
 <script src="../vendor/hs-unfold/dist/hs-unfold.min.js"></script>
 <script src="../vendor/hs-mega-menu/dist/hs-mega-menu.min.js"></script>
@@ -28,7 +28,7 @@
     $(document).on('ready', function () {
         // INITIALIZATION OF HEADER
         // =======================================================
-        var header = new HSHeader($('#header')).init();
+        // var header = new HSHeader($('#header')).init();
 
 
         // INITIALIZATION OF MEGA MENU
